--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Follow Up</title>
     <base href="/">
 
-    <link rel="icon" type="image/png" href="assets/img/followup-logo.ico">
+    <link rel="icon" type="image/png" href="assets/img/followup-logo.ico?v=2">
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
