--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- ManyChat -->
+    <script src="//widget.manychat.com/956950101096211.js" async="async"></script>
 </head>
 
 <body>
